[project]
name = "simpyvis"
version = "0.1.0"
description = ""
authors = [
    {name = "nikoliwilliams32",email = "nikoliwilliams32@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "simpy (>=4.1.1,<5.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "gitpython (>=3.1.45,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
